// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Plan rows plantest-01 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-1"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <td
          class=""
          data-label="Name"
        >
          <div
            class="ResourceLink_mock"
          >
            name: plantest-01, gvk: forklift.konveyor.io~v1beta1~Plan, ns: openshift-migration
          </div>
           
          <span
            class="pf-c-label pf-m-blue pf-m-compact"
          >
            <span
              class="pf-c-label__content"
            >
              cold
            </span>
          </span>
        </td>
        <td
          class=""
          data-label="Namespace"
        >
          <div
            class="ResourceLink_mock"
          >
            name: openshift-migration, gvk: ~~, ns: undefined
          </div>
        </td>
        <td
          class=""
          data-label="Source provider"
        >
          <div
            class="ResourceLink_mock"
          >
            name: vcenter-1, gvk: forklift.konveyor.io~v1beta1~Provider, ns: openshift-migration
          </div>
        </td>
        <td
          class=""
          data-label="Target provider"
        >
          <div
            class="ResourceLink_mock"
          >
            name: ocpv-1, gvk: forklift.konveyor.io~v1beta1~Provider, ns: openshift-migration
          </div>
        </td>
        <td
          class=""
          data-label="VMs"
        >
          <a
            href="/mtv/plans/plantest-01"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 1152 1024"
              width="1em"
            >
              <path
                d="M1152,896 L1152,256 L832,256 L832,192 L768,192 L768,256 L192,256 L192,576 L128,576 L128,640 L192,640 L192,896 L576,896 L576,956 L384,956 L384,1024 L960,1024 L960,956 L768,956 L768,896 L1152,896 Z M320,768 L320,384 L1024,384 L1024,768 L320,768 Z M768,128 L832,128 L832,64 L768,64 L768,128 Z M640,128 L704,128 L704,64 L640,64 L640,128 Z M512,128 L576,128 L576,64 L512,64 L512,128 Z M384,128 L448,128 L448,64 L384,64 L384,128 Z M256,128 L320,128 L320,64 L256,64 L256,128 Z M128,128 L192,128 L192,64 L128,64 L128,128 Z M0,128 L64,128 L64,64 L0,64 L0,128 Z M0,256 L64,256 L64,192 L0,192 L0,256 Z M0,384 L64,384 L64,320 L0,320 L0,384 Z M768,512 L832,512 L832,448 L768,448 L768,512 Z M0,512 L64,512 L64,448 L0,448 L0,512 Z M768,640 L832,640 L832,576 L768,576 L768,640 Z M640,640 L704,640 L704,576 L640,576 L640,640 Z M512,640 L576,640 L576,576 L512,576 L512,640 Z M384,640 L448,640 L448,576 L384,576 L384,640 Z M0,640 L64,640 L64,576 L0,576 L0,640 Z"
              />
            </svg>
             2
          </a>
        </td>
        <td
          class=""
          data-label="Status"
        >
          <button
            aria-disabled="false"
            class="pf-c-button pf-m-link clickable-progress-bar"
            data-ouia-component-id="OUIA-Generated-Button-link-1"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            <div
              class="pf-c-progress"
              id="progress_for_plantest-01_in_openshift-migration"
            >
              <div
                aria-hidden="true"
                class="pf-c-progress__description"
                id="progress_for_plantest-01_in_openshift-migration-description"
              >
                Running
              </div>
              <div
                aria-hidden="true"
                class="pf-c-progress__status"
              >
                <span
                  class="pf-c-progress__measure"
                >
                  {{vmDone}} of {{vmCount}} VMs migrated
                </span>
              </div>
              <div
                aria-labelledby="progress_for_plantest-01_in_openshift-migration-description"
                aria-valuemax="100"
                aria-valuemin="0"
                aria-valuenow="0"
                aria-valuetext="{{vmDone}} of {{vmCount}} VMs migrated"
                class="pf-c-progress__bar"
                role="progressbar"
              >
                <div
                  class="pf-c-progress__indicator"
                  style="width: 0%;"
                >
                  <span
                    class="pf-c-progress__measure"
                  />
                </div>
              </div>
            </div>
          </button>
        </td>
        <td
          class="pf-m-width-20 pf-m-hidden pf-m-visible-on-md"
        >
          <span
            class="pf-c-truncate"
          >
            <span
              class="pf-c-truncate__start"
            >
              my first plan
            </span>
          </span>
        </td>
        <td
          class="pf-m-hidden-on-md"
          data-label="Description"
        >
          my first plan
        </td>
        <td
          class=""
          data-label=""
        >
          <div
            class="pf-l-flex pf-m-space-items-none pf-m-flex-2 pf-m-align-items-center pf-m-nowrap"
          >
            <div
              class="pf-m-align-right"
            >
              <div
                class="pf-c-dropdown pf-m-align-right"
                data-ouia-component-id="OUIA-Generated-Dropdown-1"
                data-ouia-component-type="PF4/Dropdown"
                data-ouia-safe="true"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="false"
                  aria-label="Actions"
                  class="pf-c-dropdown__toggle pf-m-plain"
                  id="pf-dropdown-toggle-id-1"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 192 512"
                    width="1em"
                  >
                    <path
                      d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Plan rows plantest-02 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-2"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <td
          class=""
          data-label="Name"
        >
          <div
            class="ResourceLink_mock"
          >
            name: plantest-02, gvk: forklift.konveyor.io~v1beta1~Plan, ns: openshift-migration
          </div>
           
          <span
            class="pf-c-label pf-m-blue pf-m-compact"
          >
            <span
              class="pf-c-label__content"
            >
              cold
            </span>
          </span>
        </td>
        <td
          class=""
          data-label="Namespace"
        >
          <div
            class="ResourceLink_mock"
          >
            name: openshift-migration, gvk: ~~, ns: undefined
          </div>
        </td>
        <td
          class=""
          data-label="Source provider"
        >
          <div
            class="ResourceLink_mock"
          >
            name: vcenter-1, gvk: forklift.konveyor.io~v1beta1~Provider, ns: openshift-migration
          </div>
        </td>
        <td
          class=""
          data-label="Target provider"
        >
          <div
            class="ResourceLink_mock"
          >
            name: ocpv-1, gvk: forklift.konveyor.io~v1beta1~Provider, ns: openshift-migration
          </div>
        </td>
        <td
          class=""
          data-label="VMs"
        >
          <a
            href="/mtv/plans/plantest-02"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 1152 1024"
              width="1em"
            >
              <path
                d="M1152,896 L1152,256 L832,256 L832,192 L768,192 L768,256 L192,256 L192,576 L128,576 L128,640 L192,640 L192,896 L576,896 L576,956 L384,956 L384,1024 L960,1024 L960,956 L768,956 L768,896 L1152,896 Z M320,768 L320,384 L1024,384 L1024,768 L320,768 Z M768,128 L832,128 L832,64 L768,64 L768,128 Z M640,128 L704,128 L704,64 L640,64 L640,128 Z M512,128 L576,128 L576,64 L512,64 L512,128 Z M384,128 L448,128 L448,64 L384,64 L384,128 Z M256,128 L320,128 L320,64 L256,64 L256,128 Z M128,128 L192,128 L192,64 L128,64 L128,128 Z M0,128 L64,128 L64,64 L0,64 L0,128 Z M0,256 L64,256 L64,192 L0,192 L0,256 Z M0,384 L64,384 L64,320 L0,320 L0,384 Z M768,512 L832,512 L832,448 L768,448 L768,512 Z M0,512 L64,512 L64,448 L0,448 L0,512 Z M768,640 L832,640 L832,576 L768,576 L768,640 Z M640,640 L704,640 L704,576 L640,576 L640,640 Z M512,640 L576,640 L576,576 L512,576 L512,640 Z M384,640 L448,640 L448,576 L384,576 L384,640 Z M0,640 L64,640 L64,576 L0,576 L0,640 Z"
              />
            </svg>
             1
          </a>
        </td>
        <td
          class=""
          data-label="Status"
        >
          <button
            aria-disabled="false"
            aria-label="Ready"
            class="pf-c-button pf-m-link pf-m-inline"
            data-ouia-component-id="OUIA-Generated-Button-link-2"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            <div
              class="pf-l-flex pf-m-space-items-sm pf-m-align-items-center pf-m-nowrap"
              style="white-space: nowrap;"
            >
              <div
                class=""
              >
                <svg
                  aria-hidden="true"
                  class=""
                  fill="#3e8635"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                  />
                </svg>
              </div>
              <div
                class=""
              >
                Ready
              </div>
            </div>
          </button>
        </td>
        <td
          class="pf-m-width-20 pf-m-hidden pf-m-visible-on-md"
        >
          <span
            class="pf-c-truncate"
          >
            <span
              class="pf-c-truncate__start"
            >
              my 2nd plan
            </span>
          </span>
        </td>
        <td
          class="pf-m-hidden-on-md"
          data-label="Description"
        >
          my 2nd plan
        </td>
        <td
          class=""
          data-label=""
        >
          <div
            class="pf-l-flex pf-m-space-items-none pf-m-flex-2 pf-m-align-items-center pf-m-nowrap"
          >
            <div
              class="pf-m-align-right"
            >
              <button
                aria-disabled="false"
                class="pf-c-button pf-m-secondary"
                data-ouia-component-id="Start_for_plan_plantest-02_in_openshift-migration"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                type="button"
              >
                Start
              </button>
            </div>
            <div
              class="pf-m-align-right"
            >
              <div
                class="pf-c-dropdown pf-m-align-right"
                data-ouia-component-id="OUIA-Generated-Dropdown-2"
                data-ouia-component-type="PF4/Dropdown"
                data-ouia-safe="true"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="false"
                  aria-label="Actions"
                  class="pf-c-dropdown__toggle pf-m-plain"
                  id="pf-dropdown-toggle-id-3"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 192 512"
                    width="1em"
                  >
                    <path
                      d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Plan rows plantest-03 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-3"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <td
          class=""
          data-label="Name"
        >
          <div
            class="ResourceLink_mock"
          >
            name: plantest-03, gvk: forklift.konveyor.io~v1beta1~Plan, ns: openshift-migration
          </div>
           
          <span
            class="pf-c-label pf-m-blue pf-m-compact"
          >
            <span
              class="pf-c-label__content"
            >
              cold
            </span>
          </span>
        </td>
        <td
          class=""
          data-label="Namespace"
        >
          <div
            class="ResourceLink_mock"
          >
            name: openshift-migration, gvk: ~~, ns: undefined
          </div>
        </td>
        <td
          class=""
          data-label="Source provider"
        >
          <div
            class="ResourceLink_mock"
          >
            name: vcenter-1, gvk: forklift.konveyor.io~v1beta1~Provider, ns: openshift-migration
          </div>
        </td>
        <td
          class=""
          data-label="Target provider"
        >
          <div
            class="ResourceLink_mock"
          >
            name: ocpv-1, gvk: forklift.konveyor.io~v1beta1~Provider, ns: openshift-migration
          </div>
        </td>
        <td
          class=""
          data-label="VMs"
        >
          <a
            href="/mtv/plans/plantest-03"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 1152 1024"
              width="1em"
            >
              <path
                d="M1152,896 L1152,256 L832,256 L832,192 L768,192 L768,256 L192,256 L192,576 L128,576 L128,640 L192,640 L192,896 L576,896 L576,956 L384,956 L384,1024 L960,1024 L960,956 L768,956 L768,896 L1152,896 Z M320,768 L320,384 L1024,384 L1024,768 L320,768 Z M768,128 L832,128 L832,64 L768,64 L768,128 Z M640,128 L704,128 L704,64 L640,64 L640,128 Z M512,128 L576,128 L576,64 L512,64 L512,128 Z M384,128 L448,128 L448,64 L384,64 L384,128 Z M256,128 L320,128 L320,64 L256,64 L256,128 Z M128,128 L192,128 L192,64 L128,64 L128,128 Z M0,128 L64,128 L64,64 L0,64 L0,128 Z M0,256 L64,256 L64,192 L0,192 L0,256 Z M0,384 L64,384 L64,320 L0,320 L0,384 Z M768,512 L832,512 L832,448 L768,448 L768,512 Z M0,512 L64,512 L64,448 L0,448 L0,512 Z M768,640 L832,640 L832,576 L768,576 L768,640 Z M640,640 L704,640 L704,576 L640,576 L640,640 Z M512,640 L576,640 L576,576 L512,576 L512,640 Z M384,640 L448,640 L448,576 L384,576 L384,640 Z M0,640 L64,640 L64,576 L0,576 L0,640 Z"
              />
            </svg>
             4
          </a>
        </td>
        <td
          class=""
          data-label="Status"
        >
          <button
            aria-disabled="false"
            class="pf-c-button pf-m-link clickable-progress-bar"
            data-ouia-component-id="OUIA-Generated-Button-link-3"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            <div
              class="pf-c-progress pf-m-danger"
              id="progress_for_plantest-03_in_openshift-migration"
            >
              <div
                aria-hidden="true"
                class="pf-c-progress__description"
                id="progress_for_plantest-03_in_openshift-migration-description"
              >
                Failed
              </div>
              <div
                aria-hidden="true"
                class="pf-c-progress__status"
              >
                <span
                  class="pf-c-progress__measure"
                >
                  {{vmDone}} of {{vmCount}} VMs migrated
                </span>
                <span
                  class="pf-c-progress__status-icon"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
                    />
                  </svg>
                </span>
              </div>
              <div
                aria-labelledby="progress_for_plantest-03_in_openshift-migration-description"
                aria-valuemax="100"
                aria-valuemin="0"
                aria-valuenow="25"
                aria-valuetext="{{vmDone}} of {{vmCount}} VMs migrated"
                class="pf-c-progress__bar"
                role="progressbar"
              >
                <div
                  class="pf-c-progress__indicator"
                  style="width: 25%;"
                >
                  <span
                    class="pf-c-progress__measure"
                  />
                </div>
              </div>
            </div>
          </button>
        </td>
        <td
          class="pf-m-width-20 pf-m-hidden pf-m-visible-on-md"
        >
          <span
            class="pf-c-truncate"
          >
            <span
              class="pf-c-truncate__start"
            >
              my 3rd plan
            </span>
          </span>
        </td>
        <td
          class="pf-m-hidden-on-md"
          data-label="Description"
        >
          my 3rd plan
        </td>
        <td
          class=""
          data-label=""
        >
          <div
            class="pf-l-flex pf-m-space-items-none pf-m-flex-2 pf-m-align-items-center pf-m-nowrap"
          >
            <div
              class="pf-m-align-right"
            >
              <button
                aria-disabled="true"
                class="pf-c-button pf-m-secondary pf-m-aria-disabled pf-m-progress"
                data-ouia-component-id="OUIA-Generated-Button-secondary-1"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                type="button"
              >
                Get logs
              </button>
            </div>
            <div
              class="pf-m-align-right"
            >
              <div
                class="pf-c-dropdown pf-m-align-right"
                data-ouia-component-id="OUIA-Generated-Dropdown-3"
                data-ouia-component-type="PF4/Dropdown"
                data-ouia-safe="true"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="false"
                  aria-label="Actions"
                  class="pf-c-dropdown__toggle pf-m-plain"
                  id="pf-dropdown-toggle-id-5"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 192 512"
                    width="1em"
                  >
                    <path
                      d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Plan rows plantest-04 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-4"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <td
          class=""
          data-label="Name"
        >
          <div
            class="ResourceLink_mock"
          >
            name: plantest-04, gvk: forklift.konveyor.io~v1beta1~Plan, ns: openshift-migration
          </div>
           
          <span
            class="pf-c-label pf-m-blue pf-m-compact"
          >
            <span
              class="pf-c-label__content"
            >
              cold
            </span>
          </span>
        </td>
        <td
          class=""
          data-label="Namespace"
        >
          <div
            class="ResourceLink_mock"
          >
            name: openshift-migration, gvk: ~~, ns: undefined
          </div>
        </td>
        <td
          class=""
          data-label="Source provider"
        >
          <div
            class="ResourceLink_mock"
          >
            name: vcenter-1, gvk: forklift.konveyor.io~v1beta1~Provider, ns: openshift-migration
          </div>
        </td>
        <td
          class=""
          data-label="Target provider"
        >
          <div
            class="ResourceLink_mock"
          >
            name: ocpv-1, gvk: forklift.konveyor.io~v1beta1~Provider, ns: openshift-migration
          </div>
        </td>
        <td
          class=""
          data-label="VMs"
        >
          <a
            href="/mtv/plans/plantest-04"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 1152 1024"
              width="1em"
            >
              <path
                d="M1152,896 L1152,256 L832,256 L832,192 L768,192 L768,256 L192,256 L192,576 L128,576 L128,640 L192,640 L192,896 L576,896 L576,956 L384,956 L384,1024 L960,1024 L960,956 L768,956 L768,896 L1152,896 Z M320,768 L320,384 L1024,384 L1024,768 L320,768 Z M768,128 L832,128 L832,64 L768,64 L768,128 Z M640,128 L704,128 L704,64 L640,64 L640,128 Z M512,128 L576,128 L576,64 L512,64 L512,128 Z M384,128 L448,128 L448,64 L384,64 L384,128 Z M256,128 L320,128 L320,64 L256,64 L256,128 Z M128,128 L192,128 L192,64 L128,64 L128,128 Z M0,128 L64,128 L64,64 L0,64 L0,128 Z M0,256 L64,256 L64,192 L0,192 L0,256 Z M0,384 L64,384 L64,320 L0,320 L0,384 Z M768,512 L832,512 L832,448 L768,448 L768,512 Z M0,512 L64,512 L64,448 L0,448 L0,512 Z M768,640 L832,640 L832,576 L768,576 L768,640 Z M640,640 L704,640 L704,576 L640,576 L640,640 Z M512,640 L576,640 L576,576 L512,576 L512,640 Z M384,640 L448,640 L448,576 L384,576 L384,640 Z M0,640 L64,640 L64,576 L0,576 L0,640 Z"
              />
            </svg>
             1
          </a>
        </td>
        <td
          class=""
          data-label="Status"
        >
          <button
            aria-disabled="false"
            class="pf-c-button pf-m-link clickable-progress-bar"
            data-ouia-component-id="OUIA-Generated-Button-link-4"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            <div
              class="pf-c-progress pf-m-success"
              id="progress_for_plantest-04_in_openshift-migration"
            >
              <div
                aria-hidden="true"
                class="pf-c-progress__description"
                id="progress_for_plantest-04_in_openshift-migration-description"
              >
                Succeeded
              </div>
              <div
                aria-hidden="true"
                class="pf-c-progress__status"
              >
                <span
                  class="pf-c-progress__measure"
                >
                  {{vmDone}} of {{vmCount}} VMs migrated
                </span>
                <span
                  class="pf-c-progress__status-icon"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                    />
                  </svg>
                </span>
              </div>
              <div
                aria-labelledby="progress_for_plantest-04_in_openshift-migration-description"
                aria-valuemax="100"
                aria-valuemin="0"
                aria-valuenow="100"
                aria-valuetext="{{vmDone}} of {{vmCount}} VMs migrated"
                class="pf-c-progress__bar"
                role="progressbar"
              >
                <div
                  class="pf-c-progress__indicator"
                  style="width: 100%;"
                >
                  <span
                    class="pf-c-progress__measure"
                  />
                </div>
              </div>
            </div>
          </button>
        </td>
        <td
          class="pf-m-width-20 pf-m-hidden pf-m-visible-on-md"
        >
          <span
            class="pf-c-truncate"
          >
            <span
              class="pf-c-truncate__start"
            >
              my 4th plan
            </span>
          </span>
        </td>
        <td
          class="pf-m-hidden-on-md"
          data-label="Description"
        >
          my 4th plan
        </td>
        <td
          class=""
          data-label=""
        >
          <div
            class="pf-l-flex pf-m-space-items-none pf-m-flex-2 pf-m-align-items-center pf-m-nowrap"
          >
            <div
              class="pf-m-align-right"
            >
              <button
                aria-disabled="true"
                class="pf-c-button pf-m-secondary pf-m-aria-disabled pf-m-progress"
                data-ouia-component-id="OUIA-Generated-Button-secondary-2"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                type="button"
              >
                Get logs
              </button>
            </div>
            <div
              class="pf-m-align-right"
            >
              <div
                class="pf-c-dropdown pf-m-align-right"
                data-ouia-component-id="OUIA-Generated-Dropdown-4"
                data-ouia-component-type="PF4/Dropdown"
                data-ouia-safe="true"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="false"
                  aria-label="Actions"
                  class="pf-c-dropdown__toggle pf-m-plain"
                  id="pf-dropdown-toggle-id-7"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 192 512"
                    width="1em"
                  >
                    <path
                      d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Plan rows plantest-05 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-5"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <td
          class=""
          data-label="Name"
        >
          <div
            class="ResourceLink_mock"
          >
            name: plantest-05, gvk: forklift.konveyor.io~v1beta1~Plan, ns: openshift-migration
          </div>
           
          <span
            class="pf-c-label pf-m-blue pf-m-compact"
          >
            <span
              class="pf-c-label__content"
            >
              cold
            </span>
          </span>
        </td>
        <td
          class=""
          data-label="Namespace"
        >
          <div
            class="ResourceLink_mock"
          >
            name: openshift-migration, gvk: ~~, ns: undefined
          </div>
        </td>
        <td
          class=""
          data-label="Source provider"
        >
          <div
            class="ResourceLink_mock"
          >
            name: vcenter-1, gvk: forklift.konveyor.io~v1beta1~Provider, ns: openshift-migration
          </div>
        </td>
        <td
          class=""
          data-label="Target provider"
        >
          <div
            class="ResourceLink_mock"
          >
            name: ocpv-1, gvk: forklift.konveyor.io~v1beta1~Provider, ns: openshift-migration
          </div>
        </td>
        <td
          class=""
          data-label="VMs"
        >
          <a
            href="/mtv/plans/plantest-05"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 1152 1024"
              width="1em"
            >
              <path
                d="M1152,896 L1152,256 L832,256 L832,192 L768,192 L768,256 L192,256 L192,576 L128,576 L128,640 L192,640 L192,896 L576,896 L576,956 L384,956 L384,1024 L960,1024 L960,956 L768,956 L768,896 L1152,896 Z M320,768 L320,384 L1024,384 L1024,768 L320,768 Z M768,128 L832,128 L832,64 L768,64 L768,128 Z M640,128 L704,128 L704,64 L640,64 L640,128 Z M512,128 L576,128 L576,64 L512,64 L512,128 Z M384,128 L448,128 L448,64 L384,64 L384,128 Z M256,128 L320,128 L320,64 L256,64 L256,128 Z M128,128 L192,128 L192,64 L128,64 L128,128 Z M0,128 L64,128 L64,64 L0,64 L0,128 Z M0,256 L64,256 L64,192 L0,192 L0,256 Z M0,384 L64,384 L64,320 L0,320 L0,384 Z M768,512 L832,512 L832,448 L768,448 L768,512 Z M0,512 L64,512 L64,448 L0,448 L0,512 Z M768,640 L832,640 L832,576 L768,576 L768,640 Z M640,640 L704,640 L704,576 L640,576 L640,640 Z M512,640 L576,640 L576,576 L512,576 L512,640 Z M384,640 L448,640 L448,576 L384,576 L384,640 Z M0,640 L64,640 L64,576 L0,576 L0,640 Z"
              />
            </svg>
             2
          </a>
        </td>
        <td
          class=""
          data-label="Status"
        >
          <button
            aria-disabled="false"
            class="pf-c-button pf-m-link pf-m-inline"
            data-ouia-component-id="OUIA-Generated-Button-link-5"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 512 512"
              width="1em"
            >
              <path
                d="M32 448c0 17.7 14.3 32 32 32h384c17.7 0 32-14.3 32-32V160H32v288zm160-212c0-6.6 5.4-12 12-12h104c6.6 0 12 5.4 12 12v8c0 6.6-5.4 12-12 12H204c-6.6 0-12-5.4-12-12v-8zM480 32H32C14.3 32 0 46.3 0 64v48c0 8.8 7.2 16 16 16h480c8.8 0 16-7.2 16-16V64c0-17.7-14.3-32-32-32z"
              />
            </svg>
             Archived
          </button>
        </td>
        <td
          class="pf-m-width-20 pf-m-hidden pf-m-visible-on-md"
        >
          <span
            class="pf-c-truncate"
          >
            <span
              class="pf-c-truncate__start"
            >
              completed with errors
            </span>
          </span>
        </td>
        <td
          class="pf-m-hidden-on-md"
          data-label="Description"
        >
          completed with errors
        </td>
        <td
          class=""
          data-label=""
        >
          <div
            class="pf-l-flex pf-m-space-items-none pf-m-flex-2 pf-m-align-items-center pf-m-nowrap"
          >
            <div
              class="pf-m-align-right"
            >
              <button
                aria-disabled="true"
                class="pf-c-button pf-m-secondary pf-m-aria-disabled pf-m-progress"
                data-ouia-component-id="OUIA-Generated-Button-secondary-3"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                type="button"
              >
                Get logs
              </button>
            </div>
            <div
              class="pf-m-align-right"
            >
              <div
                class="pf-c-dropdown pf-m-align-right"
                data-ouia-component-id="OUIA-Generated-Dropdown-5"
                data-ouia-component-type="PF4/Dropdown"
                data-ouia-safe="true"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="false"
                  aria-label="Actions"
                  class="pf-c-dropdown__toggle pf-m-plain"
                  id="pf-dropdown-toggle-id-9"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 192 512"
                    width="1em"
                  >
                    <path
                      d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Plan rows plantest-06 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-6"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <td
          class=""
          data-label="Name"
        >
          <div
            class="ResourceLink_mock"
          >
            name: plantest-06, gvk: forklift.konveyor.io~v1beta1~Plan, ns: openshift-migration
          </div>
           
          <span
            class="pf-c-label pf-m-orange pf-m-compact"
          >
            <span
              class="pf-c-label__content"
            >
              warm
            </span>
          </span>
        </td>
        <td
          class=""
          data-label="Namespace"
        >
          <div
            class="ResourceLink_mock"
          >
            name: openshift-migration, gvk: ~~, ns: undefined
          </div>
        </td>
        <td
          class=""
          data-label="Source provider"
        >
          <div
            class="ResourceLink_mock"
          >
            name: vcenter-1, gvk: forklift.konveyor.io~v1beta1~Provider, ns: openshift-migration
          </div>
        </td>
        <td
          class=""
          data-label="Target provider"
        >
          <div
            class="ResourceLink_mock"
          >
            name: ocpv-2, gvk: forklift.konveyor.io~v1beta1~Provider, ns: openshift-migration
          </div>
        </td>
        <td
          class=""
          data-label="VMs"
        >
          <a
            href="/mtv/plans/plantest-06"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 1152 1024"
              width="1em"
            >
              <path
                d="M1152,896 L1152,256 L832,256 L832,192 L768,192 L768,256 L192,256 L192,576 L128,576 L128,640 L192,640 L192,896 L576,896 L576,956 L384,956 L384,1024 L960,1024 L960,956 L768,956 L768,896 L1152,896 Z M320,768 L320,384 L1024,384 L1024,768 L320,768 Z M768,128 L832,128 L832,64 L768,64 L768,128 Z M640,128 L704,128 L704,64 L640,64 L640,128 Z M512,128 L576,128 L576,64 L512,64 L512,128 Z M384,128 L448,128 L448,64 L384,64 L384,128 Z M256,128 L320,128 L320,64 L256,64 L256,128 Z M128,128 L192,128 L192,64 L128,64 L128,128 Z M0,128 L64,128 L64,64 L0,64 L0,128 Z M0,256 L64,256 L64,192 L0,192 L0,256 Z M0,384 L64,384 L64,320 L0,320 L0,384 Z M768,512 L832,512 L832,448 L768,448 L768,512 Z M0,512 L64,512 L64,448 L0,448 L0,512 Z M768,640 L832,640 L832,576 L768,576 L768,640 Z M640,640 L704,640 L704,576 L640,576 L640,640 Z M512,640 L576,640 L576,576 L512,576 L512,640 Z M384,640 L448,640 L448,576 L384,576 L384,640 Z M0,640 L64,640 L64,576 L0,576 L0,640 Z"
              />
            </svg>
             1
          </a>
        </td>
        <td
          class=""
          data-label="Status"
        >
          <button
            aria-disabled="false"
            aria-label="Ready"
            class="pf-c-button pf-m-link pf-m-inline"
            data-ouia-component-id="OUIA-Generated-Button-link-6"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            <div
              class="pf-l-flex pf-m-space-items-sm pf-m-align-items-center pf-m-nowrap"
              style="white-space: nowrap;"
            >
              <div
                class=""
              >
                <svg
                  aria-hidden="true"
                  class=""
                  fill="#3e8635"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                  />
                </svg>
              </div>
              <div
                class=""
              >
                Ready
              </div>
            </div>
          </button>
        </td>
        <td
          class="pf-m-width-20 pf-m-hidden pf-m-visible-on-md"
        >
          <span
            class="pf-c-truncate"
          >
            <span
              class="pf-c-truncate__start"
            >
              newly created warm plan
            </span>
          </span>
        </td>
        <td
          class="pf-m-hidden-on-md"
          data-label="Description"
        >
          newly created warm plan
        </td>
        <td
          class=""
          data-label=""
        >
          <div
            class="pf-l-flex pf-m-space-items-none pf-m-flex-2 pf-m-align-items-center pf-m-nowrap"
          >
            <div
              class="pf-m-align-right"
            >
              <button
                aria-disabled="false"
                class="pf-c-button pf-m-secondary"
                data-ouia-component-id="Start_for_plan_plantest-06_in_openshift-migration"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                type="button"
              >
                Start
              </button>
            </div>
            <div
              class="pf-m-align-right"
            >
              <div
                class="pf-c-dropdown pf-m-align-right"
                data-ouia-component-id="OUIA-Generated-Dropdown-6"
                data-ouia-component-type="PF4/Dropdown"
                data-ouia-safe="true"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="false"
                  aria-label="Actions"
                  class="pf-c-dropdown__toggle pf-m-plain"
                  id="pf-dropdown-toggle-id-11"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 192 512"
                    width="1em"
                  >
                    <path
                      d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Plan rows plantest-07 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-7"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <td
          class=""
          data-label="Name"
        >
          <div
            class="ResourceLink_mock"
          >
            name: plantest-07, gvk: forklift.konveyor.io~v1beta1~Plan, ns: openshift-migration
          </div>
           
          <span
            class="pf-c-label pf-m-orange pf-m-compact"
          >
            <span
              class="pf-c-label__content"
            >
              warm
            </span>
          </span>
        </td>
        <td
          class=""
          data-label="Namespace"
        >
          <div
            class="ResourceLink_mock"
          >
            name: openshift-migration, gvk: ~~, ns: undefined
          </div>
        </td>
        <td
          class=""
          data-label="Source provider"
        >
          <div
            class="ResourceLink_mock"
          >
            name: vcenter-1, gvk: forklift.konveyor.io~v1beta1~Provider, ns: openshift-migration
          </div>
        </td>
        <td
          class=""
          data-label="Target provider"
        >
          <div
            class="ResourceLink_mock"
          >
            name: ocpv-1, gvk: forklift.konveyor.io~v1beta1~Provider, ns: openshift-migration
          </div>
        </td>
        <td
          class=""
          data-label="VMs"
        >
          <a
            href="/mtv/plans/plantest-07"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 1152 1024"
              width="1em"
            >
              <path
                d="M1152,896 L1152,256 L832,256 L832,192 L768,192 L768,256 L192,256 L192,576 L128,576 L128,640 L192,640 L192,896 L576,896 L576,956 L384,956 L384,1024 L960,1024 L960,956 L768,956 L768,896 L1152,896 Z M320,768 L320,384 L1024,384 L1024,768 L320,768 Z M768,128 L832,128 L832,64 L768,64 L768,128 Z M640,128 L704,128 L704,64 L640,64 L640,128 Z M512,128 L576,128 L576,64 L512,64 L512,128 Z M384,128 L448,128 L448,64 L384,64 L384,128 Z M256,128 L320,128 L320,64 L256,64 L256,128 Z M128,128 L192,128 L192,64 L128,64 L128,128 Z M0,128 L64,128 L64,64 L0,64 L0,128 Z M0,256 L64,256 L64,192 L0,192 L0,256 Z M0,384 L64,384 L64,320 L0,320 L0,384 Z M768,512 L832,512 L832,448 L768,448 L768,512 Z M0,512 L64,512 L64,448 L0,448 L0,512 Z M768,640 L832,640 L832,576 L768,576 L768,640 Z M640,640 L704,640 L704,576 L640,576 L640,640 Z M512,640 L576,640 L576,576 L512,576 L512,640 Z M384,640 L448,640 L448,576 L384,576 L384,640 Z M0,640 L64,640 L64,576 L0,576 L0,640 Z"
              />
            </svg>
             3
          </a>
        </td>
        <td
          class=""
          data-label="Status"
        >
          <button
            aria-disabled="false"
            class="pf-c-button pf-m-link pf-m-inline"
            data-ouia-component-id="OUIA-Generated-Button-link-7"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            Running - performing incremental data copies
          </button>
        </td>
        <td
          class="pf-m-width-20 pf-m-hidden pf-m-visible-on-md"
        >
          <span
            class="pf-c-truncate"
          >
            <span
              class="pf-c-truncate__start"
            >
              various precopy states
            </span>
          </span>
        </td>
        <td
          class="pf-m-hidden-on-md"
          data-label="Description"
        >
          various precopy states
        </td>
        <td
          class=""
          data-label=""
        >
          <div
            class="pf-l-flex pf-m-space-items-none pf-m-flex-2 pf-m-align-items-center pf-m-nowrap"
          >
            <div
              class="pf-m-align-right"
            >
              <button
                aria-disabled="false"
                class="pf-c-button pf-m-secondary"
                data-ouia-component-id="Cutover_for_plan_plantest-07_in_openshift-migration"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                type="button"
              >
                Cutover
              </button>
            </div>
            <div
              class="pf-m-align-right"
            >
              <div
                class="pf-c-dropdown pf-m-align-right"
                data-ouia-component-id="OUIA-Generated-Dropdown-7"
                data-ouia-component-type="PF4/Dropdown"
                data-ouia-safe="true"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="false"
                  aria-label="Actions"
                  class="pf-c-dropdown__toggle pf-m-plain"
                  id="pf-dropdown-toggle-id-13"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 192 512"
                    width="1em"
                  >
                    <path
                      d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Plan rows plantest-08 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-8"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <td
          class=""
          data-label="Name"
        >
          <div
            class="ResourceLink_mock"
          >
            name: plantest-08, gvk: forklift.konveyor.io~v1beta1~Plan, ns: openshift-migration
          </div>
           
          <span
            class="pf-c-label pf-m-orange pf-m-compact"
          >
            <span
              class="pf-c-label__content"
            >
              warm
            </span>
          </span>
        </td>
        <td
          class=""
          data-label="Namespace"
        >
          <div
            class="ResourceLink_mock"
          >
            name: openshift-migration, gvk: ~~, ns: undefined
          </div>
        </td>
        <td
          class=""
          data-label="Source provider"
        >
          <div
            class="ResourceLink_mock"
          >
            name: vcenter-1, gvk: forklift.konveyor.io~v1beta1~Provider, ns: openshift-migration
          </div>
        </td>
        <td
          class=""
          data-label="Target provider"
        >
          <div
            class="ResourceLink_mock"
          >
            name: ocpv-1, gvk: forklift.konveyor.io~v1beta1~Provider, ns: openshift-migration
          </div>
        </td>
        <td
          class=""
          data-label="VMs"
        >
          <a
            href="/mtv/plans/plantest-08"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 1152 1024"
              width="1em"
            >
              <path
                d="M1152,896 L1152,256 L832,256 L832,192 L768,192 L768,256 L192,256 L192,576 L128,576 L128,640 L192,640 L192,896 L576,896 L576,956 L384,956 L384,1024 L960,1024 L960,956 L768,956 L768,896 L1152,896 Z M320,768 L320,384 L1024,384 L1024,768 L320,768 Z M768,128 L832,128 L832,64 L768,64 L768,128 Z M640,128 L704,128 L704,64 L640,64 L640,128 Z M512,128 L576,128 L576,64 L512,64 L512,128 Z M384,128 L448,128 L448,64 L384,64 L384,128 Z M256,128 L320,128 L320,64 L256,64 L256,128 Z M128,128 L192,128 L192,64 L128,64 L128,128 Z M0,128 L64,128 L64,64 L0,64 L0,128 Z M0,256 L64,256 L64,192 L0,192 L0,256 Z M0,384 L64,384 L64,320 L0,320 L0,384 Z M768,512 L832,512 L832,448 L768,448 L768,512 Z M0,512 L64,512 L64,448 L0,448 L0,512 Z M768,640 L832,640 L832,576 L768,576 L768,640 Z M640,640 L704,640 L704,576 L640,576 L640,640 Z M512,640 L576,640 L576,576 L512,576 L512,640 Z M384,640 L448,640 L448,576 L384,576 L384,640 Z M0,640 L64,640 L64,576 L0,576 L0,640 Z"
              />
            </svg>
             3
          </a>
        </td>
        <td
          class=""
          data-label="Status"
        >
          <button
            aria-disabled="false"
            class="pf-c-button pf-m-link pf-m-inline"
            data-ouia-component-id="OUIA-Generated-Button-link-8"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            Running - performing incremental data copies
          </button>
        </td>
        <td
          class="pf-m-width-20 pf-m-hidden pf-m-visible-on-md"
        >
          <span
            class="pf-c-truncate"
          >
            <span
              class="pf-c-truncate__start"
            >
              cutover scheduled
            </span>
          </span>
        </td>
        <td
          class="pf-m-hidden-on-md"
          data-label="Description"
        >
          cutover scheduled
        </td>
        <td
          class=""
          data-label=""
        >
          <div
            class="pf-l-flex pf-m-space-items-none pf-m-flex-2 pf-m-align-items-center pf-m-nowrap"
          >
            <div
              class="pf-m-align-right"
            >
              <div
                class="pf-u-font-size-sm pf-u-text-align-left"
              >
                Scheduled for cutover:
                <br />
                <time
                  datetime="2023-01-18T05:27:28.820Z"
                >
                  18 Jan 2023, 05:27 UTC
                </time>
              </div>
            </div>
            <div
              class="pf-m-align-right"
            >
              <div
                class="pf-c-dropdown pf-m-align-right"
                data-ouia-component-id="OUIA-Generated-Dropdown-8"
                data-ouia-component-type="PF4/Dropdown"
                data-ouia-safe="true"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="false"
                  aria-label="Actions"
                  class="pf-c-dropdown__toggle pf-m-plain"
                  id="pf-dropdown-toggle-id-15"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 192 512"
                    width="1em"
                  >
                    <path
                      d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Plan rows plantest-09 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-9"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <td
          class=""
          data-label="Name"
        >
          <div
            class="ResourceLink_mock"
          >
            name: plantest-09, gvk: forklift.konveyor.io~v1beta1~Plan, ns: openshift-migration
          </div>
           
          <span
            class="pf-c-label pf-m-orange pf-m-compact"
          >
            <span
              class="pf-c-label__content"
            >
              warm
            </span>
          </span>
        </td>
        <td
          class=""
          data-label="Namespace"
        >
          <div
            class="ResourceLink_mock"
          >
            name: openshift-migration, gvk: ~~, ns: undefined
          </div>
        </td>
        <td
          class=""
          data-label="Source provider"
        >
          <div
            class="ResourceLink_mock"
          >
            name: vcenter-1, gvk: forklift.konveyor.io~v1beta1~Provider, ns: openshift-migration
          </div>
        </td>
        <td
          class=""
          data-label="Target provider"
        >
          <div
            class="ResourceLink_mock"
          >
            name: ocpv-1, gvk: forklift.konveyor.io~v1beta1~Provider, ns: openshift-migration
          </div>
        </td>
        <td
          class=""
          data-label="VMs"
        >
          <a
            href="/mtv/plans/plantest-09"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 1152 1024"
              width="1em"
            >
              <path
                d="M1152,896 L1152,256 L832,256 L832,192 L768,192 L768,256 L192,256 L192,576 L128,576 L128,640 L192,640 L192,896 L576,896 L576,956 L384,956 L384,1024 L960,1024 L960,956 L768,956 L768,896 L1152,896 Z M320,768 L320,384 L1024,384 L1024,768 L320,768 Z M768,128 L832,128 L832,64 L768,64 L768,128 Z M640,128 L704,128 L704,64 L640,64 L640,128 Z M512,128 L576,128 L576,64 L512,64 L512,128 Z M384,128 L448,128 L448,64 L384,64 L384,128 Z M256,128 L320,128 L320,64 L256,64 L256,128 Z M128,128 L192,128 L192,64 L128,64 L128,128 Z M0,128 L64,128 L64,64 L0,64 L0,128 Z M0,256 L64,256 L64,192 L0,192 L0,256 Z M0,384 L64,384 L64,320 L0,320 L0,384 Z M768,512 L832,512 L832,448 L768,448 L768,512 Z M0,512 L64,512 L64,448 L0,448 L0,512 Z M768,640 L832,640 L832,576 L768,576 L768,640 Z M640,640 L704,640 L704,576 L640,576 L640,640 Z M512,640 L576,640 L576,576 L512,576 L512,640 Z M384,640 L448,640 L448,576 L384,576 L384,640 Z M0,640 L64,640 L64,576 L0,576 L0,640 Z"
              />
            </svg>
             3
          </a>
        </td>
        <td
          class=""
          data-label="Status"
        >
          <button
            aria-disabled="false"
            class="pf-c-button pf-m-link clickable-progress-bar"
            data-ouia-component-id="OUIA-Generated-Button-link-9"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            <div
              class="pf-c-progress"
              id="progress_for_plantest-09_in_openshift-migration"
            >
              <div
                aria-hidden="true"
                class="pf-c-progress__description"
                id="progress_for_plantest-09_in_openshift-migration-description"
              >
                Running cutover
              </div>
              <div
                aria-hidden="true"
                class="pf-c-progress__status"
              >
                <span
                  class="pf-c-progress__measure"
                >
                  {{vmDone}} of {{vmCount}} VMs migrated
                </span>
              </div>
              <div
                aria-labelledby="progress_for_plantest-09_in_openshift-migration-description"
                aria-valuemax="100"
                aria-valuemin="0"
                aria-valuenow="33.333333333333336"
                aria-valuetext="{{vmDone}} of {{vmCount}} VMs migrated"
                class="pf-c-progress__bar"
                role="progressbar"
              >
                <div
                  class="pf-c-progress__indicator"
                  style="width: 33%;"
                >
                  <span
                    class="pf-c-progress__measure"
                  />
                </div>
              </div>
            </div>
          </button>
        </td>
        <td
          class="pf-m-width-20 pf-m-hidden pf-m-visible-on-md"
        >
          <span
            class="pf-c-truncate"
          >
            <span
              class="pf-c-truncate__start"
            >
              cutover started
            </span>
          </span>
        </td>
        <td
          class="pf-m-hidden-on-md"
          data-label="Description"
        >
          cutover started
        </td>
        <td
          class=""
          data-label=""
        >
          <div
            class="pf-l-flex pf-m-space-items-none pf-m-flex-2 pf-m-align-items-center pf-m-nowrap"
          >
            <div
              class="pf-m-align-right"
            >
              <div
                class="pf-c-dropdown pf-m-align-right"
                data-ouia-component-id="OUIA-Generated-Dropdown-9"
                data-ouia-component-type="PF4/Dropdown"
                data-ouia-safe="true"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="false"
                  aria-label="Actions"
                  class="pf-c-dropdown__toggle pf-m-plain"
                  id="pf-dropdown-toggle-id-17"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 192 512"
                    width="1em"
                  >
                    <path
                      d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Plan rows plantest-10 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-10"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <td
          class=""
          data-label="Name"
        >
          <div
            class="ResourceLink_mock"
          >
            name: plantest-10, gvk: forklift.konveyor.io~v1beta1~Plan, ns: openshift-migration
          </div>
           
          <span
            class="pf-c-label pf-m-orange pf-m-compact"
          >
            <span
              class="pf-c-label__content"
            >
              warm
            </span>
          </span>
        </td>
        <td
          class=""
          data-label="Namespace"
        >
          <div
            class="ResourceLink_mock"
          >
            name: openshift-migration, gvk: ~~, ns: undefined
          </div>
        </td>
        <td
          class=""
          data-label="Source provider"
        >
          <div
            class="ResourceLink_mock"
          >
            name: vcenter-1, gvk: forklift.konveyor.io~v1beta1~Provider, ns: openshift-migration
          </div>
        </td>
        <td
          class=""
          data-label="Target provider"
        >
          <div
            class="ResourceLink_mock"
          >
            name: ocpv-1, gvk: forklift.konveyor.io~v1beta1~Provider, ns: openshift-migration
          </div>
        </td>
        <td
          class=""
          data-label="VMs"
        >
          <a
            href="/mtv/plans/plantest-10"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 1152 1024"
              width="1em"
            >
              <path
                d="M1152,896 L1152,256 L832,256 L832,192 L768,192 L768,256 L192,256 L192,576 L128,576 L128,640 L192,640 L192,896 L576,896 L576,956 L384,956 L384,1024 L960,1024 L960,956 L768,956 L768,896 L1152,896 Z M320,768 L320,384 L1024,384 L1024,768 L320,768 Z M768,128 L832,128 L832,64 L768,64 L768,128 Z M640,128 L704,128 L704,64 L640,64 L640,128 Z M512,128 L576,128 L576,64 L512,64 L512,128 Z M384,128 L448,128 L448,64 L384,64 L384,128 Z M256,128 L320,128 L320,64 L256,64 L256,128 Z M128,128 L192,128 L192,64 L128,64 L128,128 Z M0,128 L64,128 L64,64 L0,64 L0,128 Z M0,256 L64,256 L64,192 L0,192 L0,256 Z M0,384 L64,384 L64,320 L0,320 L0,384 Z M768,512 L832,512 L832,448 L768,448 L768,512 Z M0,512 L64,512 L64,448 L0,448 L0,512 Z M768,640 L832,640 L832,576 L768,576 L768,640 Z M640,640 L704,640 L704,576 L640,576 L640,640 Z M512,640 L576,640 L576,576 L512,576 L512,640 Z M384,640 L448,640 L448,576 L384,576 L384,640 Z M0,640 L64,640 L64,576 L0,576 L0,640 Z"
              />
            </svg>
             3
          </a>
        </td>
        <td
          class=""
          data-label="Status"
        >
          <button
            aria-disabled="false"
            class="pf-c-button pf-m-link clickable-progress-bar"
            data-ouia-component-id="OUIA-Generated-Button-link-10"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            <div
              class="pf-c-progress pf-m-danger"
              id="progress_for_plantest-10_in_openshift-migration"
            >
              <div
                aria-hidden="true"
                class="pf-c-progress__description"
                id="progress_for_plantest-10_in_openshift-migration-description"
              >
                Failed
              </div>
              <div
                aria-hidden="true"
                class="pf-c-progress__status"
              >
                <span
                  class="pf-c-progress__measure"
                >
                  {{vmDone}} of {{vmCount}} VMs migrated
                </span>
                <span
                  class="pf-c-progress__status-icon"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
                    />
                  </svg>
                </span>
              </div>
              <div
                aria-labelledby="progress_for_plantest-10_in_openshift-migration-description"
                aria-valuemax="100"
                aria-valuemin="0"
                aria-valuenow="0"
                aria-valuetext="{{vmDone}} of {{vmCount}} VMs migrated"
                class="pf-c-progress__bar"
                role="progressbar"
              >
                <div
                  class="pf-c-progress__indicator"
                  style="width: 0%;"
                >
                  <span
                    class="pf-c-progress__measure"
                  />
                </div>
              </div>
            </div>
          </button>
        </td>
        <td
          class="pf-m-width-20 pf-m-hidden pf-m-visible-on-md"
        >
          <span
            class="pf-c-truncate"
          >
            <span
              class="pf-c-truncate__start"
            >
              failed before cutover
            </span>
          </span>
        </td>
        <td
          class="pf-m-hidden-on-md"
          data-label="Description"
        >
          failed before cutover
        </td>
        <td
          class=""
          data-label=""
        >
          <div
            class="pf-l-flex pf-m-space-items-none pf-m-flex-2 pf-m-align-items-center pf-m-nowrap"
          >
            <div
              class="pf-m-align-right"
            >
              <button
                aria-disabled="true"
                class="pf-c-button pf-m-secondary pf-m-aria-disabled pf-m-progress"
                data-ouia-component-id="OUIA-Generated-Button-secondary-4"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                type="button"
              >
                Get logs
              </button>
            </div>
            <div
              class="pf-m-align-right"
            >
              <div
                class="pf-c-dropdown pf-m-align-right"
                data-ouia-component-id="OUIA-Generated-Dropdown-10"
                data-ouia-component-type="PF4/Dropdown"
                data-ouia-safe="true"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="false"
                  aria-label="Actions"
                  class="pf-c-dropdown__toggle pf-m-plain"
                  id="pf-dropdown-toggle-id-19"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 192 512"
                    width="1em"
                  >
                    <path
                      d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Plan rows plantest-11 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-11"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <td
          class=""
          data-label="Name"
        >
          <div
            class="ResourceLink_mock"
          >
            name: plantest-11, gvk: forklift.konveyor.io~v1beta1~Plan, ns: openshift-migration
          </div>
           
          <span
            class="pf-c-label pf-m-blue pf-m-compact"
          >
            <span
              class="pf-c-label__content"
            >
              cold
            </span>
          </span>
        </td>
        <td
          class=""
          data-label="Namespace"
        >
          <div
            class="ResourceLink_mock"
          >
            name: openshift-migration, gvk: ~~, ns: undefined
          </div>
        </td>
        <td
          class=""
          data-label="Source provider"
        >
          <div
            class="ResourceLink_mock"
          >
            name: vcenter-1, gvk: forklift.konveyor.io~v1beta1~Provider, ns: openshift-migration
          </div>
        </td>
        <td
          class=""
          data-label="Target provider"
        >
          <div
            class="ResourceLink_mock"
          >
            name: ocpv-1, gvk: forklift.konveyor.io~v1beta1~Provider, ns: openshift-migration
          </div>
        </td>
        <td
          class=""
          data-label="VMs"
        >
          <a
            href="/mtv/plans/plantest-11"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 1152 1024"
              width="1em"
            >
              <path
                d="M1152,896 L1152,256 L832,256 L832,192 L768,192 L768,256 L192,256 L192,576 L128,576 L128,640 L192,640 L192,896 L576,896 L576,956 L384,956 L384,1024 L960,1024 L960,956 L768,956 L768,896 L1152,896 Z M320,768 L320,384 L1024,384 L1024,768 L320,768 Z M768,128 L832,128 L832,64 L768,64 L768,128 Z M640,128 L704,128 L704,64 L640,64 L640,128 Z M512,128 L576,128 L576,64 L512,64 L512,128 Z M384,128 L448,128 L448,64 L384,64 L384,128 Z M256,128 L320,128 L320,64 L256,64 L256,128 Z M128,128 L192,128 L192,64 L128,64 L128,128 Z M0,128 L64,128 L64,64 L0,64 L0,128 Z M0,256 L64,256 L64,192 L0,192 L0,256 Z M0,384 L64,384 L64,320 L0,320 L0,384 Z M768,512 L832,512 L832,448 L768,448 L768,512 Z M0,512 L64,512 L64,448 L0,448 L0,512 Z M768,640 L832,640 L832,576 L768,576 L768,640 Z M640,640 L704,640 L704,576 L640,576 L640,640 Z M512,640 L576,640 L576,576 L512,576 L512,640 Z M384,640 L448,640 L448,576 L384,576 L384,640 Z M0,640 L64,640 L64,576 L0,576 L0,640 Z"
              />
            </svg>
             2
          </a>
        </td>
        <td
          class=""
          data-label="Status"
        >
          <button
            aria-disabled="false"
            class="pf-c-button pf-m-link clickable-progress-bar"
            data-ouia-component-id="OUIA-Generated-Button-link-11"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            <div
              class="pf-c-progress pf-m-warning"
              id="progress_for_plantest-11_in_openshift-migration"
            >
              <div
                aria-hidden="true"
                class="pf-c-progress__description"
                id="progress_for_plantest-11_in_openshift-migration-description"
              >
                Finished - Incomplete
              </div>
              <div
                aria-hidden="true"
                class="pf-c-progress__status"
              >
                <span
                  class="pf-c-progress__measure"
                >
                  {{vmDone}} of {{vmCount}} VMs migrated
                </span>
                <span
                  class="pf-c-progress__status-icon"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 576 512"
                    width="1em"
                  >
                    <path
                      d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                    />
                  </svg>
                </span>
              </div>
              <div
                aria-labelledby="progress_for_plantest-11_in_openshift-migration-description"
                aria-valuemax="100"
                aria-valuemin="0"
                aria-valuenow="50"
                aria-valuetext="{{vmDone}} of {{vmCount}} VMs migrated"
                class="pf-c-progress__bar"
                role="progressbar"
              >
                <div
                  class="pf-c-progress__indicator"
                  style="width: 50%;"
                >
                  <span
                    class="pf-c-progress__measure"
                  />
                </div>
              </div>
            </div>
          </button>
        </td>
        <td
          class="pf-m-width-20 pf-m-hidden pf-m-visible-on-md"
        >
          <span
            class="pf-c-truncate"
          >
            <span
              class="pf-c-truncate__start"
            >
              finished with some canceled VMs
            </span>
          </span>
        </td>
        <td
          class="pf-m-hidden-on-md"
          data-label="Description"
        >
          finished with some canceled VMs
        </td>
        <td
          class=""
          data-label=""
        >
          <div
            class="pf-l-flex pf-m-space-items-none pf-m-flex-2 pf-m-align-items-center pf-m-nowrap"
          >
            <div
              class="pf-m-align-right"
            >
              <button
                aria-disabled="true"
                class="pf-c-button pf-m-secondary pf-m-aria-disabled pf-m-progress"
                data-ouia-component-id="OUIA-Generated-Button-secondary-5"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                type="button"
              >
                Get logs
              </button>
            </div>
            <div
              class="pf-m-align-right"
            >
              <div
                class="pf-c-dropdown pf-m-align-right"
                data-ouia-component-id="OUIA-Generated-Dropdown-11"
                data-ouia-component-type="PF4/Dropdown"
                data-ouia-safe="true"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="false"
                  aria-label="Actions"
                  class="pf-c-dropdown__toggle pf-m-plain"
                  id="pf-dropdown-toggle-id-21"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 192 512"
                    width="1em"
                  >
                    <path
                      d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
